trunk/Archive2/26/a3d81fcd683b33/output
+ g++ -std=c++11 -O3 -march=native -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:5:6: error: expected ';' before '{' token
     a{1,2,4};
      ^
main.cpp:5:13: warning: statement has no effect [-Wunused-value]
     a{1,2,4};
             ^
